--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -851,7 +851,13 @@
  	     }
  	    $("#notice").modal("hide");
  		});
+ 	
  	 
+ 	 var mloginUrl = window.location.pathname;
+ 	 
+ 	 if(mloginUrl =="/mlogin" ){
+ 		$('#loginModal').modal('show');
+ 	 }
  	
  	
 </script>
