--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -184,7 +184,7 @@
 												</td>
 											</tr>
 											<tr>
-												<th><span class="">쿠폰 선택</span></th>
+												<th><span class="">쿠폰(선택)</span></th>
 												<td class="pd_t17">
 													<!-- <div class="selec-box bg-st"> -->
 														<select class="selectpicker" id="sbx_couponList" disabled>
@@ -377,6 +377,7 @@
 							</div>
 					
 							<div class="bat-box5">
+								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
 								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
 								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
 							</div>
@@ -455,18 +456,18 @@ var result = /*[[${result}]]*/ 'default';
 var amount = 0; //할인 전 금액
 var disc = 0; //할인할 금액
 var totalAmount = 0; //최종 결제 금액
-var sbx_couponSqList = []; //셀렉트 박스 쿠폰 순번 저장용
+var sbx_couponList = []; //셀렉트 박스 쿠폰 순번 저장용
 var trnsprt = new Object(); //운송 테이블
 var workGrtUrl = new Image(); //보증서
 workGrtUrl.src = result.dealInfo.workGrtUrl; //보증서 주소
 
-var historyYn = "Y";
+/* var historyYn = "Y";
 history.pushState(null, null, '');
 window.onpopstate = function(e) {    
 	if(historyYn == "Y"){  
 		history.back(-1);    
 	}
-};
+}; */
 /*
  * 화면 오픈시
  */
@@ -648,7 +649,7 @@ function openReceipt(){
  * 결제하기
  */
 function btn_payment(){
-	historyYn = "N";
+	//historyYn = "N";
 	var data = {
 			/*메인 페이에 보낼 파라미터*/
 			mbrRefNo : "", //주문번호
@@ -692,12 +693,12 @@ function btn_payment(){
 		}); 
 	}
 	if(result.dealInfo.sellPaymntSttsCd == "2PW"){
-		if($("#sbx_trnsprtTypCd").val() == "" || $("#sbx_trnsprtTypCd").val() == null){
+		if($("#sbx_trnsprtTypCd option:selected").val() == "" || $("#sbx_trnsprtTypCd option:selected").val() == "null"){
 			modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
 			return false;
 		}else{
-			if($("#sbx_trnsprtTypCd").val() == "P"){
-				if($("#sbx_trnsprtServiceCd").val() == "" || $("#sbx_trnsprtServiceCd").val() == null){
+			if($("#sbx_trnsprtTypCd option:selected").val() == "P"){
+				if($("#sbx_trnsprtAreaCd option:selected").val() == "" || $("#sbx_trnsprtAreaCd option:selected").val() == "null"){
 					modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
 					return false;
 				}
@@ -708,7 +709,9 @@ function btn_payment(){
 				data.paymntTypCd = "2"; //거래 차수
 				data.mbrRefNo = result.dealInfo.mbrRefNo + "-3"; //주문 번호
 				var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 쿠폰 index를 가져온다
-				data.cuponSq = sbx_couponSqList[index]; //쿠폰 순번을 가져온다
+				if(index > -1){
+					data.cuponSq = sbx_couponList[index].cuponSq; //쿠폰 순번을 가져온다
+				}
 				$.ajax({
 					type: "POST",
 					contentType: 'application/json',
@@ -764,7 +767,9 @@ function paymntCompleted(){
 	data.paymntTypCd = "2"; //거래 차수
 	data.mbrRefNo = result.dealInfo.mbrRefNo + "-3"; //거래 순번
 	var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 2차 쿠폰 index를 가져온다
-	data.cuponSq = sbx_couponSqList[index]; //1차 결제 쿠폰 순번을 가져온다
+	if(index > -1){
+		data.cuponSq = sbx_couponList[index].cuponSq; //1차 결제 쿠폰 순번을 가져온다
+	}
 	$.ajax({
 		type: "POST",
 		contentType: 'application/json',
@@ -827,7 +832,7 @@ window.call = function (data) {
 			var param = new Object();
 			param.trnsprtInfo = trnsprtInfo;
 			param.dealSq = result.dealInfo.dealSq;
-			param.buyMbrSq = result.mbrInfo.buyMbrSq; 
+			param.buyMbrSq = result.dealInfo.buyMbrSq; 
 			param.sellMbrSq = result.dealInfo.sellMbrSq; 
 			param.artstSq = result.dealInfo.artstSq;
 			$.ajax({
@@ -850,26 +855,36 @@ window.call = function (data) {
 //운송 구분 선택시
 $("#sbx_trnsprtTypCd").on("change", function(){
 	$("#div_trnsprtServiceCd").empty();
+	$("#div_couponList").empty();
 	var selected = $(this).val(); //선택된 값 가져오기
 	if(selected == "null"){
 		$("#div_trnsprtTypCd").empty();
-		$('#sbx_trnsprtAreaCd').val(null);
-		$("#sbx_trnsprtServiceCd").val(null);
-		document.getElementById("sbx_trnsprtServiceCd").disabled = true;
+		$('#sbx_trnsprtAreaCd').val("null");
+		$("#sbx_trnsprtServiceCd").val("null");
+		$("#sbx_trnsprtServiceCd").attr("disabled", true);
 		$("#sbx_trnsprtAreaCd").selectpicker("hide"); //지역 셀렉트박스 숨기기
+		$("#sbx_couponList").val("null");
+		$("#sbx_couponList").attr("disabled", true);
 		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 	}else{
 		if(selected == "P"){ //프리니엄 운송이면
 			$("#sbx_trnsprtAreaCd").selectpicker("show"); //지역 셀렉트박스 보이기
-			document.getElementById("sbx_trnsprtServiceCd").disabled = true; //서비스 선택 셀렉트 박스 비활성화
-			$('#sbx_trnsprtAreaCd').val(null); //초기값 선택
-			$('#sbx_trnsprtServiceCd').val(null); //초기값 선택
+			$("#sbx_trnsprtServiceCd").attr("disabled", true); //서비스 선택 셀렉트 박스 비활성화
+			$('#sbx_trnsprtAreaCd').val("null"); //초기값 선택
+			$('#sbx_trnsprtServiceCd').val("null"); //초기값 선택
 			$("#div_trnsprtTypCd").empty();
+			$("#sbx_couponList").val("null");
+			$("#sbx_couponList").attr("disabled", true);
+			$("#div_couponList").empty();
 			$(".selectpicker").selectpicker("refresh");
 			$('#sbx_trnsprtAreaCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
 		}else{ //일반 운송이면
-			document.getElementById("sbx_trnsprtServiceCd").disabled = true; //서비스 선택 셀렉트 박스 비활성화
+			$('#sbx_trnsprtServiceCd').val("null"); //초기값 선택
+			$("#sbx_trnsprtServiceCd").attr("disabled", true); //서비스 선택 셀렉트 박스 비활성화
+			$('#sbx_trnsprtAreaCd').val("null"); //초기값 선택
 			$("#sbx_trnsprtAreaCd").selectpicker("hide"); //지역 셀렉트박스 숨기기
+			$("#sbx_couponList").val("null");
+			$("#sbx_couponList").attr("disabled", false);
 			$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 			//운송 가격 표시하기
 			var innerText = "";
@@ -904,11 +919,16 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 
 //운송 지역 구분 선택시
 $("#sbx_trnsprtAreaCd").on("change", function(){
-	$("#div_trnsprtServiceCd").empty();
+	$("#div_trnsprtServiceCd").empty(); //초기화
 	var selected = $(this).val(); //선택된 값 가져오기
+	$("#sbx_couponList").val("null");
+	$("#div_couponList").empty();
 	if(selected == "null"){
 		$("#div_trnsprtTypCd").empty();
+		$("#sbx_couponList").attr("disabled", true);
+		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 	}else{
+		$("#sbx_couponList").attr("disabled", false);
 		var target = document.getElementById("sbx_trnsprtServiceCd");
 		var innerText = "";
 		//부가서비스 선택 셀렉트 박스에 text, value 넣기
@@ -943,7 +963,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 	        	trnsprtDivCd : "S", //판매자
 	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
 	    		trnsprtAreaCd : selected, //지역 코드
-	    		trnsprtReqYn : "Y" //부가서비스 필수 여부
+	    		trnsprtReqYn : "Y", //부가서비스 필수 여부
 	        },
 	        async: false,
 			success: function(data){
@@ -964,14 +984,15 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		target.disabled = false; //서비스 선택 셀렉트 박스 활성화
 		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 		$('#sbx_trnsprtServiceCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
-		
-		
 	}
 	totalTrnsprtPrc(); //총 금액 자동계산
 });
 
 //서비스 구분 셀렉트 박스 선택시
 $("#sbx_trnsprtServiceCd").on("change", function(){
+	$("#sbx_couponList").val("null");
+	$("#div_couponList").empty();
+	$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 	var selected = $(this).val(); //선택된 값 가져오기
 	if(selected == "null"){
 		$("#div_trnsprtServiceCd").empty();
@@ -989,7 +1010,8 @@ $("#sbx_trnsprtServiceCd").on("change", function(){
 		if(textOverlap){
 			$("#sbx_trnsprtServiceCd").val("null");
 			$("#div_trnsprtServiceCd").empty();
-			modalAlertShow("같은 부가서비스는 선택할 수 없습니다.", "sbx_trnsprtServiceCd");
+			$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
+			modalAlertShow("같은 부가서비스는 선택할 수 없습니다.");
 		}else{
 			var innerText = '';
 			innerText += '<div class="comy-box">';
@@ -1000,7 +1022,15 @@ $("#sbx_trnsprtServiceCd").on("change", function(){
 			$("#div_trnsprtServiceCd").append(innerText).trigger("create"); //운송 가격 정보 추가
 		}
 	}
-	totalTrnsprtPrc(); //총 금액 자동계산
+	$("#sbx_couponList").trigger("change");
+	//totalTrnsprtPrc(); //총 금액 자동계산
+	/* if($("#sbx_couponList option:selected").val() != "null"){ */
+		
+		//$("#sbx_trnsprtTypCd").trigger("change");
+		
+	/* }else{
+		
+	} */
 });
 //쿠폰 목록 가져오기
 function getCouponList(cuponTypCd){
@@ -1014,18 +1044,28 @@ function getCouponList(cuponTypCd){
 		success: function(data){
 			var target = document.getElementById("sbx_couponList"); //쿠폰 셀렉트 박스 가져오기
 			if(data != null && data.result.length > 0){
-				target.disabled = false; //쿠폰 셀렉트 박스 활성화
 				target.options.length = 1; //쿠폰 셀렉트박스 옵션 초기화
 				for(var i=0; i<data.result.length; i++){ //쿠폰 박스에 옵션 추가
+					
 					var opt = document.createElement("option");
-					if(data.result[i].cuponDr != null){
+				
+					var object = new Object(); //쿠폰 리스트에 넣을 JSON 값
+					object.cuponSq = data.result[i].cuponSq; //쿠폰 SQ
+					object.cuponTypCd = data.result[i].cuponTypCd; //쿠폰 할인 유형
+					object.discTypCd = data.result[i].discTypCd; //쿠폰 할인 방식
+					if(data.result[i].cuponDetailCd != null){ //쿠폰 할인 디테일 코드
+						object.cuponDetailCd = data.result[i].cuponDetailCd;
+					}
+					
+					if(data.result[i].discTypCd != "AD"){ //금액 할인이면
 						opt.value = data.result[i].cuponDr;
-					}else{
+					}else{ //퍼센트 할인이면
 						opt.value = data.result[i].cuponDiscAmt;
 					}
-					opt.text = data.result[i].cuponNm;
+					opt.text = data.result[i].cuponNm; //쿠폰 이름
+					
 					target.appendChild(opt); //쿠폰 셀렉트박스 옵션 추가
-					sbx_couponSqList[i] = data.result[i].cuponSq; //쿠폰 array에 쿠폰 순번 추가
+					sbx_couponList.push(object); //쿠폰 Array에 쿠폰 옵션 추가
 				}
 				$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
 			}
@@ -1038,29 +1078,109 @@ function getCouponList(cuponTypCd){
 
 //쿠폰 셀렉트 박스 선택시
 $("#sbx_couponList").on("change", function(){
-	var checked = $("#sbx_couponList option:selected").val();
-	if(checked != "null"){
-		var innerText = '';
-		innerText += '<div class="comy-box">';
-		innerText += '	<div class="cmy-text">'+$("#sbx_couponList option:selected").text()+'</div>';
-		if($("#sbx_couponList option:selected").val().length < 2){
-			innerText += '	<div id="div_couponVal" class="cmy-coupon">'+$("#sbx_couponList option:selected").val()+'%</div>';
-		}else{
-			innerText += '	<div id="div_couponVal" class="cmy-coupon">'+$("#sbx_couponList option:selected").val()+' KRW</div>';
+	var param = new Object();
+	var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 쿠폰 index를 가져온다
+	if(index > -1){
+		param.cuponDiscAmt = $("#sbx_couponList option:selected").val(); //선택한 쿠폰의 할인 값
+		param.cuponNm = $("#sbx_couponList option:selected").text(); //선택판 쿠폰의 이름
+		param.cuponSq = sbx_couponList[index].cuponSq;
+		param.cuponTypCd = sbx_couponList[index].cuponTypCd;
+		param.discTypCd = sbx_couponList[index].discTypCd;
+		param.cuponDetailCd = sbx_couponList[index].cuponDetailCd;
+		
+		if(param.cuponDetailCd == "PSF" && $("#sbx_trnsprtTypCd option:selected").val() != "P" && 
+			$("#sbx_trnsprtAreaCd option:selected").val() == "null"){
+			modalAlertShow("선택하신 쿠폰은 사용 조건이 맞지 않습니다.");
+			$("#sbx_couponList").val("null"); //쿠폰 셀렉트박스 초기화
+			$("#div_couponList").empty();//쿠폰(선택) 영역 초기화
+			$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
+			totalTrnsprtPrc();
+			return;
 		}
-		innerText += '	<div class="cmy-end">X</div>';
-		innerText += '</div>';
-		$("#div_couponList").empty();
-		$("#div_couponList").append(innerText).trigger("create"); //쿠폰 추가
-	}else{
-		$("#div_couponList_TD").empty();
 	}
-	totalTrnsprtPrc();
+	param.trnsprtDivCd = "S";
+	param.trnsprtTypCd = $("#sbx_trnsprtTypCd option:selected").val();
+	param.trnsprtAreaCd = $("#sbx_trnsprtAreaCd option:selected").val();
+	param.trnsprtServiceCdNm = $("#sbx_trnsprtServiceCd option:selected").text();
+	
+	$.ajax({
+		url:"/applyCupon",
+		type:"post",
+		data: param,
+		success: function(data){
+			var trnsprtTypCdHtml = '';
+			var trnsprtServiceCdHtml = '';
+			var couponListHtml = '';
+			if(data.result.length > 0){
+				for(var i=0; i<data.result.length; i++){
+					//부가서비스(필수) 영역
+					if(data.result[i].regYn ==  "Y"){
+						trnsprtTypCdHtml += '<div class="comy-box">';
+						trnsprtTypCdHtml += '	<div class="cmy-text">'+data.result[i].text+'</div>';
+						trnsprtTypCdHtml += '	<div class="cmy-won">'+data.result[i].value+' KRW</div>';
+						//trnsprtTypCdHtml += '	<div class="cmy-end">X</div>';
+						trnsprtTypCdHtml += '</div>';
+					}
+					//부가서비스(선택) 영역
+					if(data.result[i].regYn ==  "N"){
+						trnsprtServiceCdHtml += '<div class="comy-box">';
+						trnsprtServiceCdHtml += '	<div class="cmy-text">'+data.result[i].text+'</div>';
+						trnsprtServiceCdHtml += '	<div class="cmy-won">'+data.result[i].value+' KRW</div>';
+						//trnsprtServiceCdHtml += '	<div class="cmy-end">X</div>';
+						trnsprtServiceCdHtml += '</div>';
+					}
+					
+				}
+				$("#div_trnsprtTypCd").empty();
+				$("#div_trnsprtTypCd").append(trnsprtTypCdHtml).trigger("create"); //운송 가격 정보 추가
+				$("#div_trnsprtServiceCd").empty();
+				$("#div_trnsprtServiceCd").append(trnsprtServiceCdHtml).trigger("create"); //운송 가격 정보 추가
+				if($("#sbx_couponList option:selected").val() != "null"){
+					//쿠폰 영역
+					couponListHtml += '<div class="comy-box">';
+					couponListHtml += '	<div class="cmy-text">'+$("#sbx_couponList option:selected").text()+'</div>';
+					if(param.discTypCd == "DR"){
+						couponListHtml += '	<div id="div_couponVal" class="cmy-coupon">'+$("#sbx_couponList option:selected").val()+'%</div>';
+					}else if(param.discTypCd == "AD"){
+						couponListHtml += '	<div id="div_couponVal" class="cmy-coupon">'+formatComma($("#sbx_couponList option:selected").val())+' KRW</div>';
+					}
+					//couponListHtml += '	<div class="cmy-end">X</div>';
+					couponListHtml += '</div>';
+				}
+				$("#div_couponList").empty();
+				$("#div_couponList").append(couponListHtml).trigger("create"); //쿠폰 추가
+				//총 금액 영역
+				$("#div_totalAmount").empty(); //2차 최종 결제 금액 표시 영역을 초기화 시킨다.
+				disc = data.discAmt;
+				totalAmount = data.totalAmt;
+				$("#div_totalAmount").append("총 금액<span>"+formatComma(data.totalAmt)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
+			}
+		},
+		error: function(error) {
+	    	alert("오류 발생" + error);
+	    }
+	}); 
+	/* if($("#sbx_couponList option:selected").val() == "null"){
+		$("#sbx_trnsprtTypCd").val("null"); //부가서비스 셀렉트박스 초기화
+		$("#div_trnsprtTypCd").empty(); //부가서비스(필수) 초기화
+		$("#sbx_trnsprtAreaCd").val("null"); //부가서비스 지역 셀렉트박스 초기화
+		$("#sbx_trnsprtAreaCd").selectpicker("hide"); //부가서비스 지역 셀렉트박스 숨기기
+		$("#sbx_trnsprtServiceCd").val("null"); //부가서비스(선택) 셀렉트박스 초기화
+		$("#sbx_trnsprtServiceCd").attr("disabled", true); //부가서비스(선택) 셀렉트박스 비활성화
+		$("#div_trnsprtServiceCd").empty(); //부가서비스(선택) 초기화
+		$("#sbx_couponList").val("null"); //쿠폰 셀렉트박스 초기화
+		$("#sbx_couponList").attr("disabled", true); //쿠폰 셀렉트박스 비활성화
+		$("#div_couponList").empty();//쿠폰(선택) 영역 초기화
+		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
+		totalTrnsprtPrc();
+	} */
+	
 });
 
 //최종 결제 금액 자동 표시
 function totalTrnsprtPrc(){
 	totalAmount = 0; //최종 결제 금액 초기화
+	disc = 0; //할인 금액 초기화
 	/******************/
 	/*결제 최종 금액 구하기*/
 	/*****************/
@@ -1070,19 +1190,6 @@ function totalTrnsprtPrc(){
 		trnsprtPrc = cmyWonList[i].innerText.replaceAll(/,/g, ''); //부가서비스 금액을 가져온다
 		trnsprtPrc = parseInt(trnsprtPrc.replaceAll(' KRW', '')); //부가서비스 금액을 가져온다
 		totalAmount += trnsprtPrc; ///최종 부가서비스 금액을 가져온다
-	}
-	if(document.querySelector("#div_couponVal") != null){
-		disc = document.querySelector("#div_couponVal").innerText; //쿠폰 할인 금액을 가져온다
-		if(disc.indexOf("%", 0) > 0){ //쿠폰 할인 금액이 퍼센트이면
-			disc = disc.replaceAll('%', ''); //쿠폰 할인 금액을 가져온다
-			disc = parseInt(disc)*0.01; //쿠폰 할인 금액을 가져온다
-			disc = totalAmount * disc; //쿠폰 할인 금액을 가져온다
-			totalAmount -= disc; //부가서비스에서 할인 금액을 뺀다
-		}else{ //쿠폰 할인 금액이 원화이면
-			disc = disc.replaceAll(' KRW', '') //쿠폰 할인 금액을 가져온다
-			disc = parseInt(disc); //쿠폰 할인 금액을 가져온다
-			totalAmount -= disc; //부가서비스에서 할인 금액을 뺀다
-		}
 	}
 	$("#div_totalAmount").empty(); //2차 최종 결제 금액 표시 영역을 초기화 시킨다.
 	$("#div_totalAmount").append("총 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
