빅베너_이벤트 페이지

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -87,17 +87,24 @@
 								</div>
 							</div> 
 							-->
+							
+							<!-- 이벤트 베너 2022-07-22 -->
+							<div class="swiper-slide" align="center" style="background-color:#31DBD2;">
+								<img src="resources/img/banner-14_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
+							<!-- 
 							<div class="swiper-slide" align="center" style="background-color:#90D4D3;">
 								<img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
-								<!-- <div class="mab-text">
+								<div class="mab-text">
 									<div class="mb1-box">
 										<div class="mb1-title" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;">사전출품작보러가기</div>
 										<div class="mb1-title2">GRAND OPEN</div>
 										<div class="mb1-title3">오픈 기념 수수료 할인 이벤트</div>
 										<div class="mb1-title4">판매자 3%, 구매자 6%</div>
 									</div>
-								</div> -->
+								</div>
 							</div>
+							 -->
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
 								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 								<!-- <div class="mab-text">
@@ -136,6 +143,9 @@
 									</div>
 								</div> -->
 							</div>
+							
+							
+							
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
 					</div>
@@ -147,9 +157,15 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
+							<!-- 이벤트 베너 2022-07-22 -->
+							<div class="swiper-slide">
+								<img src="resources/img/banner-14_tablet.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
+							<!--
 							<div class="swiper-slide">
 								<img src="resources/img/banner-11_tablet.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
 							</div>
+							-->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_tablet.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
@@ -170,9 +186,15 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
+							<!-- 이벤트 베너 2022-07-22 -->
+							<div class="swiper-slide">
+								<img src="resources/img/banner-14_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
+							<!-- 
 							<div class="swiper-slide">
 								<img src="resources/img/banner-11_mobile.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
 							</div>
+							 -->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_mobile.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
