--- a/src/main/resources/templates/thymeleaf/fo/member/join_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_1.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="join_box" style="padding:50px;">
 					<div  style="text-align:center;padding-bottom:20px;">
-						<img src="resources/img/icon/login-logo.png"  class="login-logo"/>
+						<img src="resources/img/bigLogo.png"  class="login-logo"/>
 					</div>
 					<div class="me-text" style="text-align:center;color:#7F7F7F;padding:8px;">
 						개인간 미술품 거래 마켓플레이스
