--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -243,7 +243,7 @@
 				</div>
 			</div>
 			<div class="modal-body login-body">
-				<img src="resources/img/icon/login-logo.png"  class="login-logo"/>
+				<img src="resources/img/bigLogo2.png"  class="login-logo"/>
 				<div class="login-box">
 					<p class="lb-p1">LOGIN</p>
 					<div class="input-box">
