--- a/src/main/resources/templates/thymeleaf/fo/member/join_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_1.html
@@ -68,7 +68,7 @@
 					<h3>회원가입</h3>
 				</div>
 				<div class="join_box" style="padding:50px;">
-					<div  style="text-align:;padding-bottom:20px;">
+					<div  style="text-align:center;padding-bottom:20px;">
 						<img src="resources/img/bigLogo.png"  class="login-logo" style="max-width:250px;"/>
 					</div>
 					<div class="me-text" style="text-align:center;color:#7F7F7F;padding:8px;">
