--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -287,9 +287,9 @@
 										</div>
 										
 										<div class="mbtn-box">
-											<a href="javascript:fnModalAlert();" class="btns-3">카드영수증</a>
+											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
 											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a>
+											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
 											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
 										</div>
 									</div>
