자동완성 수정 / 작품 검색결과 화면 수정

--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -33,7 +33,7 @@
 								</div>
 								<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 									<div class="panel-body">
-										<input type="radio" id="r33" name="authSq" value="1" class="searchOption" onclick="dealSearch()" checked/>
+										<input type="radio" id="r33" name="authSq" value="1" class="searchOption" onclick="dealSearch()"/>
 										<label for="r33"><span></span>Collector</label><br/>
 										<input type="radio" id="r44" name="authSq" value="2" class="searchOption" onclick="dealSearch()"/>
 										<label for="r44"><span></span>Artist</label>
@@ -50,7 +50,7 @@
 								</div>
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
-										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()" checked/>
+										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()"/>
 										<label for="a11"><span></span>진행 중인 거래</label><br/>
 										<input type="checkbox" id="a22" name="dealSttsCd" value="TC" class="searchOption" onclick="dealSearch()"/>
 										<label for="a22"><span></span>종료된 거래</label><br/>
