--- a/src/main/resources/templates/thymeleaf/fo/member/join_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_1.html
@@ -90,7 +90,7 @@
 					</div>
 					
 					<div class="bat-box3">
-						<button type="button" class="ba-btn1" id="mbrCpNumBtn"><span>인증 후 인증하기</span></button>
+						<button type="button" class="ba-btn1" id="mbrCpNumBtn"><span>인증 후 가입하기</span></button>
 					</div>
 					<!--
 					<div class="login-lk">
