500만원 이상 쿠폰 적용

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -946,11 +946,11 @@ function event(cd){
         			        success: function(data) {
         			        	console.log(data);
         			        	if(workTypCd == "COLL"){
-        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리니엄배송 운송비 무료 쿠폰이 발급되었습니다.", "myCollection");
+        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리미엄배송 운송비 무료 쿠폰이 발급되었습니다.", "myCollection");
         		        		}else if(workTypCd == "WORK"){
-        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리니엄배송 운송비 무료 쿠폰이 발급되었습니다.", "myWork");
+        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리미엄배송 운송비 무료 쿠폰이 발급되었습니다.", "myWork");
         		        		}else{
-        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리니엄배송 운송비 무료 쿠폰이 발급되었습니다.", "main");
+        		        			modalAlertShow("거래가 등록되었습니다.<br/>딜링아트 그랜드오픈 이벤트<br/>프리미엄배송 운송비 무료 쿠폰이 발급되었습니다.", "main");
         		        		}
         			        },           
         			        error: function(error) {
