문구추가 및 모바일 배경 경로 수정

--- a/src/main/resources/static/css/event_css/ui_mo.css
+++ b/src/main/resources/static/css/event_css/ui_mo.css
@@ -12,7 +12,7 @@ html, body{font-size: calc(100vw / 75);}
 }
 .head-wrap {
     width: 100%;
-    background-image: url("../img/bg-mo.png");
+    background-image: url("/resources/img/bg-mo.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-color: #eef8f7;
