Revert "이벤트 페이지 Footer 문구 추가"
This reverts commit 3230713060bf50e956430b300b3e16e1f4186360.

--- a/src/main/resources/templates/thymeleaf/fo/event/event_v1.html
+++ b/src/main/resources/templates/thymeleaf/fo/event/event_v1.html
@@ -182,9 +182,8 @@
 					<div class="footer-text">
 						<ol>
 							<li>이벤트는 8월31일에 종료됩니다.</li>
-							<li>EVENT1 회원가입 이벤트, EVENT 3 작품구매비 이벤트 당첨자는 개별 연락 드리며, 공지사항 게시판을 확인해 주세요.<br>
+							<li>EVENT1 회원가입 이벤트, EVENT 3 작품구매비 이벤트 당첨자는 개별 연락 드리며, 공지사항 게시판을 확인해 주세요.</li>
 								<span class="pd_l20">- 디지털 에디션의 운송비는 본인부담 입니다.</span>
-							</li>
 							<li>EVENT2 작품 판매 수수료는 경우 정산 시 차감 방식으로, 판매 수수료 0원으로 정산 됩니다.<br/>
 								<span class="pd_l20 pd_ta">- 경매 : 이벤트 기간 내 낙찰 기준</span>
 								<span class="pd_l20">- 정찰 : 이벤트 기간 내 1차 결제 기준</span>
