--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -462,13 +462,13 @@ var trnsprt = new Object(); //운송 테이블
 var workGrtUrl = new Image(); //보증서
 workGrtUrl.src = result.dealInfo.workGrtUrl; //보증서 주소
 
-/* var historyYn = "Y";
+var historyYn = "Y";
 history.pushState(null, null, '');
 window.onpopstate = function(e) {    
 	if(historyYn == "Y"){  
 		history.back(-1);    
 	}
-}; */
+};
 /*
  * 화면 오픈시
  */
@@ -650,7 +650,7 @@ function openReceipt(){
  * 결제하기
  */
 function btn_payment(){
-	//historyYn = "N";
+	historyYn = "N";
 	var data = {
 			/*메인 페이에 보낼 파라미터*/
 			mbrRefNo : "", //주문번호
@@ -793,6 +793,7 @@ function paymntCompleted(){
  * 결제 완료/실패 시 리로드 된다
  */
 window.call = function (data) {
+	historyYn = "N";
 	//운송 정보를 입력한다.
 	if(data == "200"){
 		var trnsprtInfo = [];
