--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -5221,7 +5221,10 @@ position: relative;background-color: #fbfbfb;}
 
 
 /* 0518 */
-.link-text{width:7.5rem;}
+/* .link-text{width:7.5rem;} */
+/* 0722 */
+.link-text {width:15.5rem; padding-bottom:1rem;}
+.mgz-title img {display:block; vertical-align:top; width:28rem; padding-left:2rem;}
 
 /* 0520 */
 .mobile-con-wrap{}
