--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -70,7 +70,7 @@
 				<div class="mgz-wrap">
 					<div class="mgz-top mgz-bg-1">
 						<div class="mgz-title">
-							<img src="resources/img/mgz/title.png" />
+							<img src="resources/img/mgz/newtitle.png" />
 							<div class="mgz-text mt-bgs"><span>미술을 읽는 아홉 가지 새로운 시각</span></div>
 						</div>
 					</div>
