--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -103,7 +103,7 @@
 				<div class="navbox">
 					<nav>
 						<li><a href="/deal">Deal</a></li>
-						<li><a href="/insights"><img src="resources/img/link-text.png" class="link-text" /></a></li>
+						<li><a href="/insights"><img src="resources/img/mgz/link-text.png" class="link-text" /></a></li>
 						<li><a href="/artist">Artist Library</a></li>
 						<li><a href="/serviceIntro">About</a></li>
 					</nav>
