작품 미리보기 - 스케일 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -764,7 +764,7 @@
 				</div>
 			</div>
 			<div class="modal-body">
-				<div class="contentbox">
+				<div class="contentbox baeg-left">
 					<div class="bigImages">
 						<img class="big big2" th:src="${result.deal.workMainImgUrl}"/>
 					</div>
