--- a/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
@@ -354,7 +354,7 @@
 				</div>
 			</div>
 			<div class="modal-body">
-				<div class="contentbox">
+				<div class="contentbox baeg-left">
 					<div class="bigImages">
 						<img class="big big2" th:src="${result.work.workMainImgUrl}"/>
 					</div>
