--- a/src/main/resources/templates/thymeleaf/fo/member/join_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_2.html
@@ -29,8 +29,6 @@
 		  gtag('config', 'G-WRJBSR52MT');
 		</script>
 		
-		
-		
 		<!-- Google Tag Manager -->
 		<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. --!>
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -40,14 +38,29 @@
 		})(window,document,'script','dataLayer','GTM-NBP5CQ9');</script>
 		<!-- End Google Tag Manager -->
 		
-		
-		
-		
 		<!-- Google Tag Manager (noscript) -->
 		<!-- 또한 여는 <body> 태그 바로 뒤에 코드를 붙여넣으세요. -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
+		
+		
+		<!-- 페이스북 Meta Pixel Code -->
+		<script>
+		  !function(f,b,e,v,n,t,s)
+		  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+		  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+		  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+		  n.queue=[];t=b.createElement(e);t.async=!0;
+		  t.src=v;s=b.getElementsByTagName(e)[0];
+		  s.parentNode.insertBefore(t,s)}(window, document,'script',
+		  'https://connect.facebook.net/en_US/fbevents.js');
+		  fbq('init', '5995234030505207');
+		  fbq('track', 'PageView');
+		</script>
+		<noscript><img height="1" width="1" style="display:none"
+		  src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"
+		/></noscript>
     
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
