소장가 알림 텍스트 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -308,7 +308,12 @@
 								</tr>
 								<tr>
 									<th><span class="">소장가</span></th>
-									<td><input type="text" class="input-4" id="workPrc"/></td>
+									<td>
+										<input type="text" class="input-4" id="workPrc"/>
+										<p class="table-p">
+											※작품 소장가는 거래 등록 후 노출되지 않습니다.
+										</p>
+									</td>
 								</tr>
 								<tr>
 									<th><span class="">작품 사진(좌)</span></th>
