--- a/src/main/resources/templates/thymeleaf/fo/member/join_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_2.html
@@ -381,6 +381,7 @@
   		memberInputBtnClick = 0;
   		return;
   	} 
+  	/*
   	if(!/^[a-zA-Z0-9!@#$%^&*()?_~]{8,20}$/.test(mbrPasswrd))
   	{
   		$('#mbrPwdCheckU').css('color','red');
@@ -389,10 +390,13 @@
   		memberInputBtnClick = 0;
   		return;
   	}
+  	*/
+  	/*
   	var chk = 0;
   	if(mbrPasswrd.search(/[0-9]/g) != -1 ) chk ++;
   	if(mbrPasswrd.search(/[a-z]/ig)  != -1 ) chk ++;
   	if(mbrPasswrd.search(/[!@#$%^&*()?_~]/g)  != -1  ) chk ++;
+  	
   	if(chk < 3)
   	{
   		$('#mbrPwdCheckU').css('color','red');
@@ -401,6 +405,26 @@
   		memberInputBtnClick = 0;
   		return;
   	}
+  	 */
+  	 
+  	if(!/^[a-zA-Z0-9!@#$%^&*()?_~]{8,20}$/.test(mbrPasswrd))
+  	{
+  		$('#mbrPwdCheckU').css('color','red');
+  		$('#mbrPwdCheckD').css('color','#999999');
+  		$("#mbrPasswrd").focus();
+  		memberInputBtnClick = 0;
+  		return;
+  	}
+  	  	  	 
+  	if(/(\w)\1\1/.test(mbrPasswrd)){
+  		
+  		$('#mbrPwdCheckU').css('color','#999999');
+  		$('#mbrPwdCheckD').css('color','red');
+  		$("#mbrPasswrd").focus();
+  		memberInputBtnClick = 0;
+  		return;
+  	}
+  	
   	 
   	 var SamePass_0 = 0; //동일문자 카운트
   	 var SamePass_1 = 0; //연속성(+) 카운드
