--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -4641,6 +4641,7 @@ code{
     display: block;
     vertical-align: top;
     width: 24rem;
+    padding-left:2rem;
 }
 .mgz-title .mgz-text{
     position: relative;
