--- a/src/main/resources/static/css/event_css/ui_mo.css
+++ b/src/main/resources/static/css/event_css/ui_mo.css
@@ -204,7 +204,8 @@ html, body{font-size: calc(100vw / 75);}
 .ene-ul li .elist .e-img-4{
     position: absolute;
     top: 56px;
-    right: 25px;
+    right:5.5rem; 
+    width:15rem;
 }
 
 
