--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -4364,6 +4364,7 @@ code{
     display: block;
     vertical-align: top;
     width: 28rem;
+    padding-left:2rem;
 }
 .mgz-title .mgz-text{
     position: relative;
@@ -5221,7 +5222,9 @@ position: relative;background-color: #fbfbfb;}
 
 
 /* 0518 */
-.link-text{width:7.5rem;}
+.link-text{
+	width:15.5rem; padding-bottom:1rem;
+}
 
 /* 0520 */
 .mobile-con-wrap{}
